--- a/472App/.classpath
+++ b/472App/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_51"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jstl.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/addressing.jar"/>
@@ -90,6 +90,6 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xlxpScannerUtils.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xml-apis.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xpp3-1.1.3.4.M.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.3/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="D:/sw/apache-tomcat-8.0.30-windows-x64/apache-tomcat-8.0.30/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
